# voxkit-desktop

./: .coveragerc.all  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  COVERAGE_RECOMMENDATIONS.md  COVERAGE_STRATEGY.md  IMPLEMENTATION_NOTES.md  LICENSE  Makefile  QA_CHECKLIST.md  README.md  TESTING.md  _frozen_patch.py  build.py  config.py  conftest.py  conftest_test.py  demo.py  example_startup_script.py  gui.py  m.py  main.py  models.py  pyproject.toml  pytest.ini  styles.py  tasks.py  test_runner.py
.github/: __tmp__.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: main_merge.md  release_branch.md
.github/agents/: clean-code-developer.agent.md  code-quality.agent.md  developer.agent.md  documentation.agent.md  my-agent.agent.md
.github/workflows/: code-quality.yml  release.yml  sync-docs.yml  tests-macos.yml  tests-ubuntu.yml  tests-windows.yml  tests.yml
assets/: voxkit.icns
config/: app_info.yaml  pipeline_definitions.yaml
config/profiles/default/: app_info.yaml  pipeline_definitions.yaml
config/profiles/explanatory/: app_info.yaml  pipeline_definitions.yaml
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  RESEARCH.md  STARTUP_SCRIPT.md  search.js
docs/docs/: search.js  voxkit.html
docs/docs/voxkit/: config.html  engines.html  workers.html
docs/voxkit/: engines.html  storage.html
frameworks/modal/generic/: __init__.py  api.py  generic.py  styles.py
frameworks/widget/categorical_list/: __init__.py  api.py  categorical_list.py
hooks/: hook-Wav2TextGrid.py  hook-g2p_en.py  hook-nltk.py  hook-pypllrcomputer.py  hook-speechbrain.py  hook-typeguard.py  rthook_typeguard.py
installer/linux/: VoxKit.desktop
installer/windows/: VoxKit.iss
pages/: evaluating.py  predicting.py  training.py
pages/discussion/: __init__.py
pages/manage/: manage.py
pages/pipeline/: __init__.py  evaluating.py  model_eval.py  predicting.py  training.py
scripts/: build.py  load_core_models.py
services/: hf.py  mfa.py
src/voxkit/: __init__.py  config.py  startup.py
src/voxkit/analyzers/: __init__.py  _default_analyzer.py  audio_format_profile.py  base.py  clip_duration_statistics.py  default_analyzer.py  register.py
src/voxkit/config/: __init__.py  app_config.py  logging_config.py  pipeline_config.py  startup_config.py
src/voxkit/engines/: __init__.py  _mfa_engine.py  _w2tg_engine.py  api.py  base.py  faster_whisper_engine.py  mfa_engine.py  register.py  test_base.py  w2tg_engine.py
src/voxkit/gui/: __init__.py  formatting.py  utils.py
src/voxkit/gui/components/: __init__.py  animate_stack.py  column_dropdown.py  csv_viewer_dialog.py  csv_visual.py  dna_strand.py  grip_splitter.py  horizontal_button_selector.py  huggingface_button.py  loading_dialog.py  log_handler.py  log_viewer_dialog.py  model_selection_panel.py  overlay_effects.py  test_csv_viewer_dialog.py  toggle_switch.py
src/voxkit/gui/components/modals/aligning_settings/: __init__.py  alignment_settings.py  settings.py
src/voxkit/gui/components/modals/extraction_settings/: __init__.py  extraction_settings.py  settings.py
src/voxkit/gui/components/modals/import_model_dialog/: import_model_dialog.py
src/voxkit/gui/components/modals/training_settings/: __init__.py  settings.py  training_settings.py  w2tg_training_settings.py
src/voxkit/gui/components/widgets/: __init__.py  dna_strand.py  horizontal_button_selector.py  overlay_effects.py
src/voxkit/gui/frameworks/_______/: api.py  categorical_list.py  styles.py
src/voxkit/gui/frameworks/categorical_list/: __init__.py  categorical_list.py
src/voxkit/gui/frameworks/categorical_table/: __init__.py  categorical_table.py
src/voxkit/gui/frameworks/modal/generic/: __init__.py  api.py  generic.py  styles.py
src/voxkit/gui/frameworks/settings_modal/: __init__.py  api.py  generic.py  styles.py
src/voxkit/gui/pages/datasets/: __init__.py  datasets_page.py  styles.py  utils.py
src/voxkit/gui/pages/manage/: __init__.py  manage.py  styles.py  utils.py
src/voxkit/gui/pages/models/: __init__.py  import_dialog.py  models_page.py  styles.py  utils.py
src/voxkit/gui/pages/pipeline/: __init__.py  base_stacker.py  comparison_stacker.py  evaluating.py  evaluation_stacker.py  markdown_stacker.py  model_eval.py  pllr_stacker.py  predicting.py  prediction_stacker.py  styles.py  training.py  training_stacker.py  transcription_stacker.py  viewer_stacker.py
src/voxkit/gui/styles/: __init__.py
src/voxkit/gui/workers/: __init__.py  datasets_thread.py  models_thread.py  startup.py  upload_thread.py  worker_thread.py
src/voxkit/services/: hf.py  mfa.py
src/voxkit/storage/: __init__.py  alignments.py  config.py  datasets.py  models.py  models_manager.py  paths.py  settings_manager.py  utils.py  validation.py
src/voxkit/storage/test/: __init__.py  test_alignments.py  test_datasets.py  test_models.py  test_setup.py  test_startup.py  test_utils.py
src/voxkit/storage/tests/: test_paths.py
src/voxkit/workers/: upload_thread.py
storage/: __init__.py  models_manager.py  paths.py
storage/tests/: __init__.py
tests/analyzers/: test_analyzer_manager.py  test_default_analyzer.py
tests/config/: test_app_config.py  test_logging_config.py  test_pipeline_config.py
tests/engines/: test_base.py  test_engine_manager.py
tests/gui/: conftest.py  test_animated_stack.py  test_base_stacker.py  test_column_dropdown.py  test_csv_viewer_dialog.py  test_datasets_page.py  test_loading_dialog.py  test_models_page.py  test_toggle_switch.py  test_utils.py  test_worker_thread.py
tests/storage/: test_alignments.py  test_datasets.py  test_models.py  test_setup.py  test_utils.py
ui/modals/aligning_settings/: __init__.py  alignment_settings.py  settings.py
ui/modals/extraction_settings/: __init__.py  extraction_settings.py  settings.py
ui/modals/training_settings/: __init__.py  settings.py  training_settings.py
ui/widgets/: animate_stack.py  horizontal_button_selector.py
utils/: storage.py  validation.py
workers/: __init__.py  worker_thread.py
(+2 files in other folders)
